--- a/uCtrl/uCtrlDesktop/Resources.qrc
+++ b/uCtrl/uCtrlDesktop/Resources.qrc
@@ -2,5 +2,7 @@
     <qresource prefix="/Resources">
         <file>Images/uCtrl-Icon.png</file>
         <file>Images/Back.png</file>
+        <file>Images/light_icon.png</file>
+        <file>Images/drag.png</file>
     </qresource>
 </RCC>
