Begun development for the UConfigConditionWidget and UTimeConditionWidget Created a dynamic clock module named UClock

--- a/uCtrl/uCtrlDesktop/Resources.qrc
+++ b/uCtrl/uCtrlDesktop/Resources.qrc
@@ -4,5 +4,6 @@
         <file>Images/Back.png</file>
         <file>Images/light_icon.png</file>
         <file>Images/drag.png</file>
+        <file>Images/Clock-Icon.png</file>
     </qresource>
 </RCC>
