--- a/uCtrl/uCtrlDesktop/Resources.qrc
+++ b/uCtrl/uCtrlDesktop/Resources.qrc
@@ -5,5 +5,6 @@
         <file>Images/light_icon.png</file>
         <file>Images/drag.png</file>
         <file>Images/Clock-Icon.png</file>
+        <file>Images/Calendar-Icon.png</file>
     </qresource>
 </RCC>
