Added a combobox control

--- a/src/uCtrlDesktop/Resources.qrc
+++ b/src/uCtrlDesktop/Resources.qrc
@@ -7,5 +7,6 @@
         <file>Images/icon-uctrl-white.png</file>
         <file>Images/Clock-Icon.png</file>
         <file>uCtrl-small-white.png</file>
+        <file>Images/Combobox-arrow.png</file>
     </qresource>
 </RCC>
