Iteration 2 of the static Device Information Window
Conflicts:
	src/uCtrlDesktop/Resources.qrc

--- a/src/uCtrlDesktop/Resources.qrc
+++ b/src/uCtrlDesktop/Resources.qrc
@@ -11,5 +11,6 @@
         <file>Languages/uctrl_en.qm</file>
         <file>Languages/uctrl_fr.qm</file>
         <file>Images/Combobox-arrow.png</file>
+        <file>Images/pencil.svg</file>
     </qresource>
 </RCC>
