Add UCheckbox and its demo. Also include FontAwesome

--- a/src/uCtrlDesktop/Resources.qrc
+++ b/src/uCtrlDesktop/Resources.qrc
@@ -12,5 +12,6 @@
         <file>Languages/uctrl_fr.qm</file>
         <file>Images/Combobox-arrow.png</file>
         <file>Images/pencil.svg</file>
+        <file>fontawesome-webfont.ttf</file>
     </qresource>
 </RCC>
