Refactor UConditions Pass on enums + jsonify

--- a/src/uCtrlDesktop/Resources.qrc
+++ b/src/uCtrlDesktop/Resources.qrc
@@ -7,7 +7,7 @@
         <file>Images/icon-uctrl-white.png</file>
         <file>Images/Clock-Icon.png</file>
         <file>Images/uCtrl-small-white.png</file>
-        <file>JSON.txt</file>
+        <file>data.json</file>
         <file>Languages/uctrl_en.qm</file>
         <file>Languages/uctrl_fr.qm</file>
         <file>Images/Combobox-arrow.png</file>
