--- a/src/uCtrlDesktop/Resources.qrc
+++ b/src/uCtrlDesktop/Resources.qrc
@@ -48,6 +48,8 @@
         <file alias="UTextbox.qml">qml/ui/UTextbox.qml</file>
         <file alias="UFontAwesome.qml">qml/ui/UFontAwesome.qml</file>
         <file alias="UButton.qml">qml/ui/UButton.qml</file>
+        <file alias="USaveCancel.qml">qml/ui/USaveCancel.qml</file>
+        <file alias="USwitch.qml">qml/ui/USwitch.qml</file>
     </qresource>
     <qresource prefix="/platform">
         <file alias="Platforms.qml">qml/platform/Platforms.qml</file>
