Add device configuration container

--- a/src/uCtrlDesktop/Resources.qrc
+++ b/src/uCtrlDesktop/Resources.qrc
@@ -60,5 +60,6 @@
         <file>qml/condition/Conditions.qml</file>
         <file>qml/condition/Condition.qml</file>
         <file>data.json</file>
+        <file>qml/device/type/Temperature.qml</file>
     </qresource>
 </RCC>
