Add Temperature and Humidity device container

--- a/src/uCtrlDesktop/Resources.qrc
+++ b/src/uCtrlDesktop/Resources.qrc
@@ -61,5 +61,7 @@
         <file>qml/condition/Condition.qml</file>
         <file>data.json</file>
         <file>qml/device/type/Temperature.qml</file>
+        <file>qml/device/type/Humidity.qml</file>
+        <file>qml/device/type/Error.qml</file>
     </qresource>
 </RCC>
