Added Settings page

--- a/src/uCtrlDesktop/Resources.qrc
+++ b/src/uCtrlDesktop/Resources.qrc
@@ -68,5 +68,6 @@
         <file>qml/jbQuick/Charts/qmldir</file>
         <file>qml/jbQuick/Charts/README.md</file>
         <file>qml/ui/UAlert.qml</file>
+        <file>qml/settings/Settings.qml</file>
     </qresource>
 </RCC>
