Added all possible device type. Started implementing the Light customized info

--- a/src/uCtrlDesktop/Resources.qrc
+++ b/src/uCtrlDesktop/Resources.qrc
@@ -69,5 +69,16 @@
         <file>qml/jbQuick/Charts/README.md</file>
         <file>qml/ui/UAlert.qml</file>
         <file>qml/settings/Settings.qml</file>
+        <file>qml/device/type/Switch.qml</file>
+        <file>qml/device/type/StatusLight.qml</file>
+        <file>qml/device/type/RF.qml</file>
+        <file>qml/device/type/PushButton.qml</file>
+        <file>qml/device/type/ProximitySensor.qml</file>
+        <file>qml/device/type/NinjaEyes.qml</file>
+        <file>qml/device/type/LightSensor.qml</file>
+        <file>qml/device/type/Light.qml</file>
+        <file>qml/device/type/LED.qml</file>
+        <file>qml/label/IconLabel.qml</file>
+        <file>qml/ui/USlider.qml</file>
     </qresource>
 </RCC>
