--- a/src/uCtrlDesktop/Resources.qrc
+++ b/src/uCtrlDesktop/Resources.qrc
@@ -102,5 +102,6 @@
         <file>qml/device/type/MotionSensor.qml</file>
         <file>qml/device/type/Sensor.qml</file>
         <file>qml/device/DeviceIcon.qml</file>
+        <file>qml/ui/UColorPicker.qml</file>
     </qresource>
 </RCC>
