--- a/src/uCtrlDesktop/Resources.qrc
+++ b/src/uCtrlDesktop/Resources.qrc
@@ -104,5 +104,7 @@
         <file>qml/device/DeviceIcon.qml</file>
         <file>qml/ui/UCheckbox.qml</file>
         <file>qml/ui/UColorPicker.qml</file>
+        <file>Images/NinjaIcon.png</file>
+        <file>Images/NinjaIconEyes.png</file>
     </qresource>
 </RCC>
