--- a/src/uCtrlDesktop/Resources.qrc
+++ b/src/uCtrlDesktop/Resources.qrc
@@ -72,6 +72,7 @@
         <file>qml/device/type/PushButton.qml</file>
         <file>qml/device/type/NinjaEyes.qml</file>
         <file>qml/device/type/LightSensor.qml</file>
+        <file>qml/device/type/LimitlessLEDWhite.qml</file>
         <file>qml/label/IconLabel.qml</file>
         <file>qml/ui/USlider.qml</file>
         <file>qml/device/Logs.qml</file>
