Change task input value according to device type

--- a/src/uCtrlDesktop/Resources.qrc
+++ b/src/uCtrlDesktop/Resources.qrc
@@ -103,5 +103,9 @@
         <file>Images/NinjaIcon.png</file>
         <file>Images/NinjaIconEyes.png</file>
         <file>qml/device/type/DoorSensor.qml</file>
+        <file>qml/task/type/Switch.qml</file>
+        <file>qml/task/type/Slider.qml</file>
+        <file>qml/task/type/Text.qml</file>
+        <file>qml/task/type/Button.qml</file>
     </qresource>
 </RCC>
