--- a/src/uCtrlDesktop/Resources.qrc
+++ b/src/uCtrlDesktop/Resources.qrc
@@ -103,5 +103,6 @@
         <file>Images/NinjaIcon.png</file>
         <file>Images/NinjaIconEyes.png</file>
         <file>qml/device/type/DoorSensor.qml</file>
+        <file>qml/stats/GlobalStats.qml</file>
     </qresource>
 </RCC>
