DRY code for graphs + improvements for labels

--- a/src/uCtrlDesktop/Resources.qrc
+++ b/src/uCtrlDesktop/Resources.qrc
@@ -108,5 +108,6 @@
         <file>qml/task/type/Slider.qml</file>
         <file>qml/task/type/Text.qml</file>
         <file>qml/task/type/Button.qml</file>
+        <file>qml/device/type/GraphHelper.js</file>
     </qresource>
 </RCC>
